flux/modules/keda/keda-operator.yaml
---
# Source: keda/templates/manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: keda-operator    
    helm.sh/chart: keda-2.18.3
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/version: 2.18.3
    app.kubernetes.io/instance: keda
  name: keda-operator
  namespace: kube-system
spec:
  ports:
  - name: metricsservice
    port: 9666
    targetPort: 9666
  selector:
    app: keda-operator
---
# Source: keda/templates/metrics-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: keda-operator-metrics-apiserver
    app: keda-operator-metrics-apiserver    
    helm.sh/chart: keda-2.18.3
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/version: 2.18.3
    app.kubernetes.io/instance: keda
  name: keda-operator-metrics-apiserver
  namespace: kube-system
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    targetPort: 6443
    protocol: TCP
    appProtocol: https
  - name: metrics
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: keda-operator-metrics-apiserver
---
# Source: keda/templates/webhooks/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: keda-admission-webhooks    
    helm.sh/chart: keda-2.18.3
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/version: 2.18.3
    app.kubernetes.io/instance: keda
  name: keda-admission-webhooks
  namespace: kube-system
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 9443
    appProtocol: https
  selector:
    app: keda-admission-webhooks
---
# Source: keda/templates/manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keda-operator
  namespace: kube-system
  labels:
    app: keda-operator
    name: keda-operator
    app.kubernetes.io/name: keda-operator    
    helm.sh/chart: keda-2.18.3
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/version: 2.18.3
    app.kubernetes.io/instance: keda
spec:
  revisionHistoryLimit: 10
  replicas: 1
  selector:
    matchLabels:
      app: keda-operator
  template:
    metadata:
      labels:
        app: keda-operator
        name: keda-operator
        app.kubernetes.io/name: keda-operator        
        helm.sh/chart: keda-2.18.3
        app.kubernetes.io/component: operator
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: keda-operator
        app.kubernetes.io/version: 2.18.3
        app.kubernetes.io/instance: keda
    spec:
      enableServiceLinks: true
      serviceAccountName: keda-operator
      automountServiceAccountToken: true
      securityContext:
        runAsNonRoot: true
      containers:
        - name: keda-operator
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/kedacore/keda:2.18.3"
          command:
          - "/keda"
          args:
          - "--leader-elect"
          - "--disable-compression=true"
          - "--zap-log-level=info"
          - "--zap-encoder=console"
          - "--zap-time-encoding=rfc3339"
          - "--enable-webhook-patching=true"
          - "--cert-dir=/certs"
          - "--enable-cert-rotation=true"          
          - "--cert-secret-name=kedaorg-certs"
          - "--operator-service-name=keda-operator"
          - "--metrics-server-service-name=keda-operator-metrics-apiserver"
          - "--webhooks-service-name=keda-admission-webhooks"
          - "--k8s-cluster-name=kubernetes-default"
          - "--k8s-cluster-domain=cluster.local"
          - "--enable-prometheus-metrics=false"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 3
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          ports:
          - containerPort: 9666
            name: metricsservice
            protocol: TCP
          volumeMounts:         
          - mountPath: /certs
            name: certificates
            readOnly: true
          resources:
            limits:
              cpu: 1
              memory: 1000Mi
            requests:
              cpu: 100m
              memory: 100Mi
      volumes:
      - name: certificates
        secret:
          defaultMode: 420
          secretName: kedaorg-certs
          optional: true
      nodeSelector:
        kubernetes.io/os: linux
      dnsPolicy: ClusterFirst
      hostNetwork: false
---
# Source: keda/templates/metrics-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keda-operator-metrics-apiserver
  namespace: kube-system
  labels:
    app: keda-operator-metrics-apiserver
    app.kubernetes.io/name: keda-operator-metrics-apiserver    
    helm.sh/chart: keda-2.18.3
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/version: 2.18.3
    app.kubernetes.io/instance: keda
spec:
  revisionHistoryLimit: 10
  replicas: 1
  selector:
    matchLabels:
      app: keda-operator-metrics-apiserver
  template:
    metadata:
      labels:
        app: keda-operator-metrics-apiserver
        app.kubernetes.io/name: keda-operator-metrics-apiserver        
        helm.sh/chart: keda-2.18.3
        app.kubernetes.io/component: operator
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: keda-operator
        app.kubernetes.io/version: 2.18.3
        app.kubernetes.io/instance: keda
    spec:
      enableServiceLinks: true
      serviceAccountName: keda-metrics-server
      automountServiceAccountToken: true
      securityContext:
        runAsNonRoot: true
      containers:
        - name: keda-operator-metrics-apiserver
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/kedacore/keda-metrics-apiserver:2.18.3"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 6443
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /readyz
              port: 6443
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 3
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          command:
           - /keda-adapter
          args:
          - --port=8080
          - --secure-port=6443
          - --logtostderr=true
          - --stderrthreshold=ERROR
          - --disable-compression=true
          - --metrics-service-address=keda-operator.kube-system.svc.cluster.local:9666
          - --client-ca-file=/certs/ca.crt
          - --tls-cert-file=/certs/tls.crt
          - --tls-private-key-file=/certs/tls.key
          - --cert-dir=/certs
          - --v=0
          - --zap-log-level=info
          - --zap-encoder=console
          - --zap-time-encoding=rfc3339
          ports:
            - containerPort: 6443
              name: https
              protocol: TCP
            - containerPort: 8080
              name: metrics
              protocol: TCP
          volumeMounts:
          - mountPath: /certs
            name: certificates
            readOnly: true
          resources:
            limits:
              cpu: 1
              memory: 1000Mi
            requests:
              cpu: 100m
              memory: 100Mi
      volumes:
      - name: certificates
        secret:
          defaultMode: 420
          secretName: kedaorg-certs
      dnsPolicy: ClusterFirst
      hostNetwork: false
      nodeSelector:
        kubernetes.io/os: linux
---
# Source: keda/templates/webhooks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keda-admission-webhooks
  namespace: kube-system
  labels:
    app: keda-admission-webhooks
    name: keda-admission-webhooks
    app.kubernetes.io/name: keda-admission-webhooks    
    helm.sh/chart: keda-2.18.3
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/version: 2.18.3
    app.kubernetes.io/instance: keda
spec:
  revisionHistoryLimit: 10
  replicas: 1
  selector:
    matchLabels:
      app: keda-admission-webhooks
  template:
    metadata:
      labels:
        app: keda-admission-webhooks
        name: keda-admission-webhooks
        app.kubernetes.io/name: keda-admission-webhooks        
        helm.sh/chart: keda-2.18.3
        app.kubernetes.io/component: operator
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: keda-operator
        app.kubernetes.io/version: 2.18.3
        app.kubernetes.io/instance: keda
    spec:
      enableServiceLinks: true
      serviceAccountName: keda-webhook
      automountServiceAccountToken: true
      securityContext:
        runAsNonRoot: true
      containers:
        - name: keda-admission-webhooks
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/kedacore/keda-admission-webhooks:2.18.3"
          command:
          - /keda-admission-webhooks
          args:
          - "--zap-log-level=info"
          - "--zap-encoder=console"
          - "--zap-time-encoding=rfc3339"
          - "--cert-dir=/certs"
          - "--health-probe-bind-address=:8081"
          - --metrics-bind-address=:8080
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 3
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          ports:
          - containerPort: 9443
            name: http
            protocol: TCP
          volumeMounts:
          - mountPath: /certs
            name: certificates
            readOnly: true
          resources:
            limits:
              cpu: 1
              memory: 1000Mi
            requests:
              cpu: 100m
              memory: 100Mi
      volumes:
      - name: certificates
        secret:
          defaultMode: 420
          secretName: kedaorg-certs
      hostNetwork: false
      nodeSelector:
        kubernetes.io/os: linux
---
# Source: keda/templates/webhooks/validatingconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/name: keda-admission-webhooks    
    helm.sh/chart: keda-2.18.3
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/version: 2.18.3
    app.kubernetes.io/instance: keda
  name: keda-admission
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: keda-admission-webhooks
      namespace: kube-system
      path: /validate-keda-sh-v1alpha1-scaledobject
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: vscaledobject.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - keda.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scaledobjects
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: keda-admission-webhooks
      namespace: kube-system
      path: /validate-keda-sh-v1alpha1-scaledjob
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: vscaledjob.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - keda.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scaledjobs
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: keda-admission-webhooks
      namespace: kube-system
      path: /validate-keda-sh-v1alpha1-triggerauthentication
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: vstriggerauthentication.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - keda.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - triggerauthentications
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: keda-admission-webhooks
      namespace: kube-system
      path: /validate-keda-sh-v1alpha1-clustertriggerauthentication
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: vsclustertriggerauthentication.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - keda.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clustertriggerauthentications
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: keda-admission-webhooks
      namespace: kube-system
      path: /validate-eventing-keda-sh-v1alpha1-cloudeventsource
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: vcloudeventsource.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - eventing.keda.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - cloudeventsources
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: keda-admission-webhooks
      namespace: kube-system
      path: /validate-eventing-keda-sh-v1alpha1-clustercloudeventsource
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: vclustercloudeventsource.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - eventing.keda.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clustercloudeventsources
  sideEffects: None
  timeoutSeconds: 10
